Implemented scopus retrieval from query string

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-  "API_KEY": "[ENTER KEY HERE]",
+  "API_KEY": "d4eedee511b94200d4be5712dc1d8f14",
   "updateTimeout": 20000,
   "storeName": "RssFeeds"
 }
